--- a/githubrepos/Base.lproj/Main.storyboard
+++ b/githubrepos/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SearchViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,10 +16,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BEI-HY-iVP">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="9mF-aq-oQE">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="BYZ-38-t0r" id="Ygb-b7-LiL"/>
+                                    </connections>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="repositoryDetailCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="repositoryDetailCell" id="x4J-h7-IlD">
+                                        <rect key="frame" x="0.0" y="72" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x4J-h7-IlD" id="Jmc-tg-Xjw">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BEI-HY-iVP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4PQ-Ps-Xd0"/>
+                            <constraint firstAttribute="trailing" secondItem="BEI-HY-iVP" secondAttribute="trailing" id="TuI-gt-AHS"/>
+                            <constraint firstItem="BEI-HY-iVP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="bY4-bK-KwD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BEI-HY-iVP" secondAttribute="bottom" id="bcO-1t-ibU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="repositorySearchBar" destination="9mF-aq-oQE" id="VCb-gE-MZT"/>
+                        <outlet property="resultTableView" destination="BEI-HY-iVP" id="07B-QP-aBq"/>
+                        <outlet property="searchDisplayController" destination="A0c-Xa-mGi" id="H6L-Wx-Rfv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="A0c-Xa-mGi">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="hUu-lx-eHV"/>
+                        <outlet property="searchBar" destination="9mF-aq-oQE" id="mfx-kT-qmg"/>
+                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="yLa-sd-fay"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="3QX-Kf-v9d"/>
+                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="eM8-OR-B8X"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
         </scene>
     </scenes>
