--- a/githubrepos/Base.lproj/Main.storyboard
+++ b/githubrepos/Base.lproj/Main.storyboard
@@ -21,13 +21,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BEI-HY-iVP">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="9mF-aq-oQE">
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="b31-2o-6y1">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="BYZ-38-t0r" id="Ygb-b7-LiL"/>
-                                    </connections>
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="repositoryDetailCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="repositoryDetailCell" id="x4J-h7-IlD" customClass="RepositoryDetailCell">
@@ -66,8 +63,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="repositorySearchBar" destination="9mF-aq-oQE" id="VCb-gE-MZT"/>
-                        <outlet property="resultTableView" destination="BEI-HY-iVP" id="07B-QP-aBq"/>
+                        <outlet property="repositorySearchBar" destination="b31-2o-6y1" id="LRk-eA-FK9"/>
+                        <outlet property="resultTableView" destination="BEI-HY-iVP" id="kV8-FL-r7r"/>
                         <outlet property="searchDisplayController" destination="A0c-Xa-mGi" id="H6L-Wx-Rfv"/>
                     </connections>
                 </viewController>
@@ -75,7 +72,6 @@
                 <searchDisplayController id="A0c-Xa-mGi">
                     <connections>
                         <outlet property="delegate" destination="BYZ-38-t0r" id="hUu-lx-eHV"/>
-                        <outlet property="searchBar" destination="9mF-aq-oQE" id="mfx-kT-qmg"/>
                         <outlet property="searchContentsController" destination="BYZ-38-t0r" id="yLa-sd-fay"/>
                         <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="3QX-Kf-v9d"/>
                         <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="eM8-OR-B8X"/>
