--- a/githubrepos/Base.lproj/Main.storyboard
+++ b/githubrepos/Base.lproj/Main.storyboard
@@ -35,14 +35,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="685-cl-kzq">
-                                                    <rect key="frame" x="8" y="11" width="584" height="21"/>
+                                                    <rect key="frame" x="18" y="11" width="574" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="685-cl-kzq" firstAttribute="leading" secondItem="Jmc-tg-Xjw" secondAttribute="leadingMargin" id="9rO-fE-yzM"/>
+                                                <constraint firstItem="685-cl-kzq" firstAttribute="leading" secondItem="Jmc-tg-Xjw" secondAttribute="leadingMargin" constant="10" id="9rO-fE-yzM"/>
                                                 <constraint firstItem="685-cl-kzq" firstAttribute="centerY" secondItem="Jmc-tg-Xjw" secondAttribute="centerY" id="Ade-dg-wSL"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="685-cl-kzq" secondAttribute="trailing" id="MWc-ex-hfq"/>
                                             </constraints>
